<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:fitsSystemWindows="false"
        android:layout_height="match_parent"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_navbar"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="400dp">
            <ImageView
                android:id="@+id/portada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/banner"
                android:scaleType="centerCrop"
                android:src="@drawable/effect_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/app_name" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_header"
                android:layout_width="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:layout_height="wrap_content">



                <ImageView
                    android:id="@+id/iv_user"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_profile"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/app_name"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_header"
                android:layout_marginHorizontal="60dp"
                >


            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                >
                <LinearLayout
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content">


                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="15dp">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_play_movie"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:text="@string/button_play"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:icon="@drawable/ic_play"
                    app:iconTint="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/title_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cl_navbar"
            android:text="@string/title_rv_premiere"
            android:padding="@dimen/paddin_title_rv"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/sixe_title_rv"
            tools:ignore="SpUsage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_premiere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/title_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rv_premiere"
            android:text="@string/title_rv_horror"
            android:padding="@dimen/paddin_title_rv"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/sixe_title_rv"
            tools:ignore="SpUsage"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_horror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/title_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rv_horror"
            android:text="@string/title_rv_accion"
            android:padding="@dimen/paddin_title_rv"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/sixe_title_rv"
            tools:ignore="SpUsage"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_accion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/title_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rv_accion"
            android:text="@string/title_rv_comedia"
            android:padding="@dimen/paddin_title_rv"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/sixe_title_rv"
            tools:ignore="SpUsage"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/title_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rv_comedia"
            android:text="@string/title_rv_series"
            android:padding="@dimen/paddin_title_rv"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/sixe_title_rv"
            tools:ignore="SpUsage"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/title_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rv_series"
            android:text="@string/title_rv_proximo"
            android:padding="@dimen/paddin_title_rv"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/sixe_title_rv"
            tools:ignore="SpUsage"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_proximo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title_6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>